Update README for Renta desktop application